# hvi_toolkit

./: LICENSE  README.md  pyproject.toml
bias_eval/: __init__.py
bias_eval/dataset_base_classes/: hvi_abstract_dataset.py  hvi_extra_functionality.py  hvi_mitab25_dataset.py  hvi_standardized_dataset.py
bias_eval/dataset_splitting/: __init__.py  splits_generators.py
bias_eval/evaluators/: __init__.py  dataset_evaluator.py  metrics_calculator.py  model_evaluator.py  model_wrapper.py
bias_eval/interaction_datasets/: __init__.py  hpidb.py  hvidb.py  intact.py  rabies_lyssavirus_experimental.py  sars_cov_2_im_28880.py  tsukiyama_negatives.py  vir_host_net_3.py  virus_mentha.py  viruses_string.py
bias_eval/redundancy_reduction/: redundancy_reduction.py
bias_eval/taxonomy/: __init__.py
bias_eval/utilities/: __init__.py
examples/: README.md  check_dataset.ipynb  check_model.ipynb
hvi_datasets/: __init__.py  hpidb.py  hvi_abstract_dataset.py  hvi_mitab25_dataset.py  hvi_standardized_dataset.py  hvidb.py  intact.py  merge_datasets.ipynb  sars_cov_2_im_28880.py  taxonomy.py  tsukiyama_negatives.py  vir_host_net_3.py  virus_host_net_3.py  virus_mentha.py  viruses_string.py
hvi_datasets/dataset_base_classes/: hvi_abstract_dataset.py  hvi_extra_functionality.py  hvi_mitab25_dataset.py  hvi_standardized_dataset.py
hvi_datasets/merged_dataset/: README.md  (+1 more)
hvi_toolkit/: __init__.py
model/: README.md  biotrainer_config.yml
rabies_lyssavirus_predictions/: README.md  lyssa_experimental_interactions.csv  lyssa_experimental_interactions.ods  rabies_lyssa_predict.ipynb
(+44 files in other folders)
