[tool.poetry]
name = "hvi-toolkit"
version = "0.2.0"
description = ""
authors = ["Sebastian Franz <sebastian.franz@tum.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"

pandas = "^2.1.1"
seaborn = "^0.13.0"
taxoniq = "^1.0.1"
more-itertools = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
